变数与编辑器
修改部份变数与美化编辑器

--- a/WorldOfTheThreeKingdoms.Desktop/WorldOfTheThreeKingdoms.Desktop.csproj
+++ b/WorldOfTheThreeKingdoms.Desktop/WorldOfTheThreeKingdoms.Desktop.csproj
@@ -3417,8 +3417,8 @@
     <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonBornRegion.cs">
       <Link>GameObjects\PersonBornRegion.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDeadReason.cs">
-      <Link>GameObjects\PersonDeadReason.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDeathReason.cs">
+      <Link>GameObjects\PersonDeathReason.cs</Link>
     </Compile>
     <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDetail\Biography.cs">
       <Link>GameObjects\PersonDetail\Biography.cs</Link>
@@ -3504,11 +3504,11 @@
     <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDetail\TitleTable.cs">
       <Link>GameObjects\PersonDetail\TitleTable.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDetail\TrainPolicy.cs">
-      <Link>GameObjects\PersonDetail\TrainPolicy.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDetail\EducationPolicy.cs">
+      <Link>GameObjects\PersonDetail\EducationPolicy.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDetail\TrainPolicyList.cs">
-      <Link>GameObjects\PersonDetail\TrainPolicyList.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDetail\EducationPolicyList.cs">
+      <Link>GameObjects\PersonDetail\EducationPolicyList.cs</Link>
     </Compile>
     <Compile Include="..\WorldOfTheThreeKingdoms\GameObjects\PersonDialog.cs">
       <Link>GameObjects\PersonDialog.cs</Link>
