--- a/WorldOfTheThreeKingdoms.Android/Properties/AndroidManifest.xml
+++ b/WorldOfTheThreeKingdoms.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="WorldOfTheThreeKingdoms.Android" android:versionCode="6" android:versionName="1.0.3.2" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="15" />
+	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:icon="@drawable/Icon" android:label="中華三國志"></application>
