--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -16,6 +16,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -28,7 +29,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -42,6 +42,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -67,6 +68,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -76,6 +78,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Contracts\Records.cs" />
@@ -84,6 +87,7 @@
     <Compile Include="GameManager\Scenario.cs" />
     <Compile Include="GameManager\Session.cs" />
     <Compile Include="GameManager\Setting.cs" />
+    <Compile Include="GameManager\TextManager.cs" />
     <Compile Include="GameManager\TextureRecs.cs" />
     <Compile Include="GameObjects\Animations\Animation.cs" />
     <Compile Include="GameObjects\Animations\AnimationTable.cs" />
@@ -1624,19 +1628,52 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\Win\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\References\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SharpCompress">
       <HintPath>..\References\SharpCompress.dll</HintPath>
     </Reference>
+    <Reference Include="SharpFontCore">
+      <HintPath>..\References\SharpFontCore.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.Core">
+      <HintPath>..\References\SixLabors.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.Fonts">
+      <HintPath>..\References\SixLabors.Fonts.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.ImageSharp">
+      <HintPath>..\References\SixLabors.ImageSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.ImageSharp.Drawing">
+      <HintPath>..\References\SixLabors.ImageSharp.Drawing.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.Shapes">
+      <HintPath>..\References\SixLabors.Shapes.dll</HintPath>
+    </Reference>
     <Reference Include="Steamworks.NET, Version=12.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\Win\Steamworks.NET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.5.0\lib\netstandard1.1\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Memory">
+      <HintPath>..\References\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics.Vectors, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -41980,38 +42017,6 @@
       <Link>Content\Textures\GameComponents\SimpleTextDialog\Data\FirstPageSelected.png</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\CheckBox.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\CheckBox.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\CheckBoxSelected.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\CheckBoxSelected.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\LeftArrow.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\LeftArrow.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\RightArrow.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\RightArrow.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\RoundCheckBox.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\RoundCheckBox.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\RoundCheckBoxSelected.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\RoundCheckBoxSelected.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\TabButton.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\TabButton.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Textures\GameComponents\TabList\Data\TabButtonSelected.png">
-      <Link>Content\Textures\GameComponents\TabList\Data\TabButtonSelected.png</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="..\Content\Textures\GameComponents\ToolBar\Data\Spliter.png">
       <Link>Content\Textures\GameComponents\ToolBar\Data\Spliter.png</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -55248,29 +55253,30 @@
       <Link>Content\Textures\Resources\Troop\999\Move.png</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Font\AllText.txt" />
+    <Content Include="Content\Font\Messages.txt" />
+    <Content Include="Content\Font\MessagesDenyT.txt" />
+    <Content Include="Content\Font\MessagesL.txt" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\CheckBox.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\CheckBoxSelected.png" />
     <Content Include="Content\Textures\GameComponents\TabList\Data\ColumnHeader.png" />
     <Content Include="Content\Textures\GameComponents\TabList\Data\ColumnSpliter.png" />
     <Content Include="Content\Textures\GameComponents\TabList\Data\FocusTrack.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\LeftArrow.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\RightArrow.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\RoundCheckBox.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\RoundCheckBoxSelected.png" />
     <Content Include="Content\Textures\GameComponents\TabList\Data\ScrollButton.png" />
     <Content Include="Content\Textures\GameComponents\TabList\Data\ScrollTrack.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\Select.wav" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\TabButton.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\TabButtonSelected.png" />
     <Content Include="Content\Textures\GameComponents\ToolBar\Data\Background.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\Content\Data\Scenario\Scenarios.json">
       <Link>Content\Data\Scenario\Scenarios.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\bin\Win\Font\FontE.xnb">
-      <Link>Content\Font\FontE.xnb</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\bin\Win\Font\FontL.xnb">
-      <Link>Content\Font\FontL.xnb</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\bin\Win\Font\FontS.xnb">
-      <Link>Content\Font\FontS.xnb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\Content\bin\Win\Music\Attack\Attack.xnb">
@@ -57453,10 +57459,6 @@
       <Link>Content\Sound\Yinxiao\zhugeliang.xnb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\Content\bin\Win\Font\FontT.xnb">
-      <Link>Content\Font\FontT.xnb</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="..\Content\bin\Win\Sound\Move.xnb">
       <Link>Content\Sound\Move.xnb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -57543,6 +57545,26 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Content\Data\xlsTemplate.xlsx" />
+    <Content Include="Content\Font\FZLB_GBK.TTF">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="Content\Font\FontE.spritefont" />
+    <None Include="Content\Font\FontE.xnb" />
+    <None Include="Content\Font\FontL.spritefont" />
+    <None Include="Content\Font\FontL.xnb" />
+    <None Include="Content\Font\FontS.spritefont" />
+    <None Include="Content\Font\FontS.xnb" />
+    <None Include="Content\Font\FontT.spritefont" />
+    <None Include="Content\Font\FontT.xnb" />
+    <None Include="Content\Font\guyin.TTF" />
+    <None Include="Content\Font\hwzs.ttf" />
+    <None Include="Content\Font\simhei.ttf" />
+    <None Include="Content\Font\xingshu.ttf" />
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Sound\Troop\29\" />
