--- a/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
+++ b/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
@@ -95,9 +95,7 @@
     </Compile>
     <Compile Include="CityTypeTab.cs" />
     <Compile Include="BiographyTab.cs" />
-    <Compile Include="SkillTypeTab.cs" />
-    <Compile Include="TechniqueTypeTab.cs" />
-    <Compile Include="TitleTypeTab.cs" />
+    <Compile Include="TitleKindTab.cs" />
     <Compile Include="TroopTypeTab.cs" />
     <Compile Include="NewFactionWindow.xaml.cs">
       <DependentUpon>NewFactionWindow.xaml</DependentUpon>
